# okama-mcp

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  context7.json  glama.json  pyproject.toml  requirements.txt  server.json  smithery.yaml
.agents/skills/release-okama-mcp/: SKILL.md
.claude/skills/: release-okama-mcp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml
deploy/nginx/: index.html  okama-mcp.conf  self-hosted.conf
deploy/systemd/: okama-mcp.service
docs/images/src/: README.md  announce-en.html  announce-ru.html  make_irr_chart_en.py
docs/superpowers/plans/: 2026-06-04-m1-repositioning.md  2026-06-04-m2-pypi-ci.md  2026-06-04-m3-graphics.md  2026-06-04-m4-expansion-registry.md  2026-06-09-okama-methods-expansion.md  2026-06-15-mc-dcf-full-parity.md  2026-06-17-macro-data-indicators.md
docs/superpowers/specs/: 2026-06-04-free-selfhosted-v1-design.md  2026-06-09-okama-methods-expansion-design.md  2026-06-15-mc-dcf-full-parity-design.md  (+1 more)
src/okama_mcp/: __init__.py  __main__.py  cache.py  errors.py  rendering.py  schemas.py  serialization.py  server.py  transport.py
tests/: test_cache.py  test_errors.py  test_integration_live.py  test_rendering.py  test_schemas.py  test_serialization.py  test_server_bootstrap.py  test_tool_asset.py  test_tool_asset_list.py  test_tool_dcf.py  test_tool_frontier.py  test_tool_macro.py  test_tool_mc_diagnostics.py  test_tool_monte_carlo.py  test_tool_plots.py  test_tool_portfolio.py  test_tool_registration.py  test_tool_search.py
(+11 files in other folders)
