[tool.poetry]
name = "okama-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server exposing the okama investment portfolio toolkit to AI assistants"
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
readme = "README.md"
license = "MIT"
homepage = "https://mcp.okama.io"
repository = "https://github.com/mbk-dev/okama-mcp"
keywords = ["mcp", "okama", "investments", "portfolio", "finance", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
packages = [{ include = "okama_mcp", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
okama = ">=2.1.0"
fastmcp = ">=2.7"
pydantic = ">=2.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.poetry.scripts]
okama-mcp = "okama_mcp.transport:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [".ipynb_checkpoints", "env", ".env"]
target-version = "py311"

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: live test that hits api.okama.io (slow, network-dependent)",
]
addopts = "-m 'not integration'"
